--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -31,6 +31,23 @@ This is my emacs configuration in [[https://en.wikipedia.org/wiki/Literate_progr
 * Startup
   Some processes are required for the rest of the configuration and have to run first.
 ** Making startup faster
+   #+NAME: faster-startup
+   #+BEGIN_SRC emacs-lisp
+	 (setq package-enable-at-startup nil
+		   file-name-handler-alist nil
+		   message-log-max 16384
+		   gc-cons-threshold 402653184
+		   gc-cons-percentage 0.6
+		   auto-window-vscroll nil
+		   package--init-file-ensured t)
+
+	 (add-hook 'after-init-hook
+			   `(lambda ()
+				  (setq file-name-handler-alist file-name-handler-alist-old
+						gc-cons-threshold 800000
+						gc-cons-percentage 0.1)) t)
+   #+END_SRC
+
 ** Package Archives
    Add package archives:
    #+NAME: package-archives
